# postgres-proxy-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  demo.csv  semantic-model-tests.sql  semantic_models.json
scripts/: populate_db.sql  populate_schema.sql  populate_test_db.sql  run_tests.sh
src/: auth.rs  config.rs  lib.rs  main.rs  processor.rs  query_handler.rs  schema.rs  server.rs  tests.rs
src/data_store/: data_store.rs  mod.rs  postgres.rs  postgres_type.rs  snowflake.rs
src/semantic_model/: local_store.rs  measure.rs  mod.rs  model.rs  s3_store.rs  s3_store_tests.rs  store.rs
src/sql_parser/: mod.rs  sql_parser.rs  transformations.rs
src/utils/: config.rs  encoding.rs  mod.rs
