[package]
name = "eqtble-sql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
aws-config = "1.5.6"
aws-sdk-s3 = "1.51.0"
bytes = "1.7.1"
env_logger = "0.11.5"
envconfig = "0.11.0"
futures = "0.3.30"
log = "0.4.22"
pgwire = "0.24.1"
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snowflake-connector-rs = "=0.3.0"
sqlparser = "0.51.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.11"

[dev-dependencies]
rstest = "0.22.0"
test-log = "0.2.16"
